# WoWLogs

./: .gitignore  README.md  Tests.ipynb  main.ipynb  main.py  pyproject.toml
240330_MC/: Kikilogs_Kikidora_MC.lua
240401_AQ/: Kikilogs_Kikidora_AQ.lua
240404_Nax/: Kikilogs_Naxramas_Kikidora.lua
240409_AQ/: Kikilogs_Kikidora_AQ.lua
240411_Nax/: Kikilogs_Kikidora_240411_Nax.lua
240512_Nax/: 240512_Nax.7z
helper/: calculator.py  parsers.py  patterns.py  syncer.py  visualiser.py
